# starnavi

./: .gitignore  README.md  bot.env  bot.py  pyproject.toml  users.json
core/: middlewares.py  settings.py  urls.py
posts/: filters.py  models.py  serializers.py  tests.py  urls.py  views.py
posts/migrations/: 0001_initial.py  0002_auto_20200915_0046.py
users/: models.py  serializers.py  tests.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_auto_20200914_2217.py  0003_auto_20200914_2218.py
